--- a/src/main/webapp/templates/movie.html
+++ b/src/main/webapp/templates/movie.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="en">
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -50,38 +48,39 @@
             -webkit-line-clamp: 2; /* number of lines to show */
             -webkit-box-orient: vertical;
         }
+        .movie-poster{
+            width: 100%;
+            max-height: 500px;
+            object-fit: cover;
+        }
+
 
 
     </style>
 </head>
 <body>
 
-
-<header th:insert="~{fragments/header}">
+<header th:insert="~{fragments/header::navbar}">
 
 </header>
 
-<main>
-    <div class="container pt-5">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col" th:each="movie : ${list}">
-                <div class="card p-0">
-                    <div class="imgPlaceHolder">
-                        <a href="#" th:href="@{/movie(id=${movie.get_id()})}" class="text-decoration-none">
-                            <img th:src="${movie.getPoster()}" class="card-img-top">
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <a href="#" th:href="@{/movie(id=${movie.get_id()})}" class="text-decoration-none">
-                            <h5 class="card-title movie-title" th:text="${movie.getTitle()} + '('+ ${movie.year} + ')'"></h5>
-                        </a>
-                        <p class="card-text movie-description" th:text="${movie.getPlog()}"></p>
-                        <p class="card-text movie-cast">
-                            <small class="text-muted" th:each="cast,iterStat : ${movie.getCast()}" th:text="${cast}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks</small>
-                        </p>
-                    </div>
-                </div>
-            </div>
+<main class="container mt-3" th:object="${movie}">
+    <h1 th:text="*{title}">Movie Name</h1>
+    [(*{year})] - [(*{runtime})] mins
+    <div class="row  mt-3">
+        <div class="col-sm-8 order-sm-1 order-2">
+            Genres: <span class="text-primary" th:each="gen,iterStat : *{genres}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">Action, Crime, Drama</span>
+            <hr>
+            <span th:text="*{fullPlot}">Cartoonist Winsor McCay agrees to create a large set of drawings that will be photographed and made into a motion picture. The job requires plenty o</span>
+            <hr>
+            Director: <span class="text-primary" th:each="gen,iterStat : *{directors}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">James</span>
+            <hr>
+            Writers: <span class="text-primary" th:each="gen,iterStat : *{writers}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">David, Peter</span>
+            <hr>
+            Stars: <span class="text-primary" th:each="gen,iterStat : *{cast}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks, Leonardo</span>
+        </div>
+        <div class="col-sm-4 order-sm-2 order-1">
+            <img class="movie-poster" src="../images/poster.jpg" th:src="*{poster}">
         </div>
     </div>
 </main>
@@ -89,7 +88,6 @@
 <footer th:insert="~{fragments/footer}">
 
 </footer>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
