--- a/src/main/webapp/templates/fragments/footer.html
+++ b/src/main/webapp/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-light text-center text-lg-start mt-5">
+<div class="bg-light text-center text-lg-start mt-5" th:fragment="footer">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2022 Copyright:
