--- a/src/main/webapp/templates/fragments/header.html
+++ b/src/main/webapp/templates/fragments/header.html
@@ -1,38 +1,33 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" th:fragment="navbar">
     <div class="container">
-        <a class="navbar-brand" href="#"><span th:text="#{site_name}">NavBar</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#" th:href="@{/}"><img th:src="@{/images/logo.svg}" src="../../images/logo.svg" width="30" height="30" class="d-inline-block align-tops me-1">
+            <span th:text="#{site_name}">NavBar</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Hot</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Trending</a>
                 </li>
-
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Genres
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" th:each="gen : ${genres}">
-                        <li th:each="gen : ${genres}"><a class="dropdown-item" href="#"><span th:text="${gen}"></span></a></li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" th:with="genres=#{genres}">
+                        <li th:each="gen:${#strings.arraySplit(genres,',')}"><a class="dropdown-item" th:href="@{/search(by='genres',value=${gen})}"><span th:text="${gen}"></span></a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#">All</a></li>
                     </ul>
                 </li>
-
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" method="get" action="/search">
+                <input class="form-control me-2" type="search" name="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
@@ -47,24 +42,24 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img th:src="@{/images/wall1.jpg}" src="../static/images/wall1.jpg" class="d-block w-100">
+            <img th:src="@{/images/wall1.jpg}" src="../../images/wall1.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <p>Helps you select the great movie to watch</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{/images/wall2.jpg}" src="../static/images/wall1.jpg" class="d-block w-100">
+            <img th:src="@{/images/wall2.jpg}" src="../../images/wall2.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <p>Celebrity interviews, trending entertainment stories</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{/images/wall3.jpg}" src="../static/images/wall1.jpg" class="d-block w-100">
+            <img th:src="@{/images/wall3.jpg}" src="../../images/wall3.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <p>Empower you to share your entertainment knowledge</p>
             </div>
         </div>
     </div>
