--- a/src/main/webapp/templates/fragments/frontend.html
+++ b/src/main/webapp/templates/fragments/frontend.html
@@ -1,3 +1,11 @@
+<head th:fragment="head">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link th:href="@{/css/main.css}" href="../../css/main.css" rel="stylesheet">
+    <title th:text="#{site_name}">Title</title>
+</head>
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" th:fragment="navbar">
     <div class="container">
         <a class="navbar-brand" href="#" th:href="@{/}"><img th:src="@{/images/logo.svg}" src="../../images/logo.svg" width="30" height="30" class="d-inline-block align-tops me-1">
@@ -18,7 +26,7 @@
                         Genres
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" th:with="genres=#{genres}">
-                        <li th:each="gen:${#strings.arraySplit(genres,',')}"><a class="dropdown-item" th:href="@{/search(by='genres',value=${gen})}"><span th:text="${gen}"></span></a></li>
+                        <li th:each="gen:${#strings.arraySplit(genres,',')}"><a class="dropdown-item" th:href="@{/(by='genres',value=${gen})}"><span th:text="${gen}"></span></a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -26,14 +34,13 @@
                     </ul>
                 </li>
             </ul>
-            <form class="d-flex" method="get" action="/search">
+            <form class="d-flex" method="get" action="/">
                 <input class="form-control me-2" type="search" name="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </div>
 </nav>
-
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" th:fragment="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -49,14 +56,14 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{/images/wall2.jpg}" src="../../images/wall2.jpg" class="d-block w-100">
+            <img th:src="@{/images/wall2.jpg}" src="../../images/wall1.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Celebrity interviews, trending entertainment stories</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{/images/wall3.jpg}" src="../../images/wall3.jpg" class="d-block w-100">
+            <img th:src="@{/images/wall3.jpg}" src="../../images/wall1.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Empower you to share your entertainment knowledge</p>
@@ -72,3 +79,14 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+<footer th:fragment="footer">
+    <div class="bg-light text-center text-lg-start mt-5">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022 Copyright:
+            <a class="text-dark" href="https://mdbootstrap.com/"><span th:text="#{site_name}">mflix</span></a>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+</footer>
