--- a/src/main/webapp/templates/movie.html
+++ b/src/main/webapp/templates/movie.html
@@ -1,78 +1,26 @@
 <!doctype html>
 <html>
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
+<head th:replace="~{fragments/frontend::head}">
+    <link th:href="@{/css/main.css}" href="../css/main.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
-    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
-    <title th:text="#{site_name}">Hello, world!</title>
-
-    <style>
-        .carousel-item {
-            height: 300px;
-        }
-
-        .card-img-top {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            background: gray;
-        }
-
-        .movie-title {
-            height: 50px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; /* number of lines to show */
-            -webkit-box-orient: vertical;
-        }
-
-        .movie-description {
-            height: 70px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3; /* number of lines to show */
-            -webkit-box-orient: vertical;
-        }
-
-        .movie-cast {
-            height: 50px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; /* number of lines to show */
-            -webkit-box-orient: vertical;
-        }
-        .movie-poster{
-            width: 100%;
-            max-height: 500px;
-            object-fit: cover;
-        }
-
-
-
-    </style>
 </head>
+
 <body>
 
-<header th:insert="~{fragments/header::navbar}">
-
-</header>
+<header th:insert="~{fragments/frontend::navbar}"></header>
 
 <main class="container mt-3" th:object="${movie}">
     <h1 th:text="*{title}">Movie Name</h1>
-    [(*{year})] - [(*{runtime})] mins
+    <span th:text="*{year}">2017</span> - <span th:text="*{year}">88</span> mins
+
     <div class="row  mt-3">
-        <div class="col-sm-8 order-sm-1 order-2">
+        <div class="col-md-8 order-md-1 order-2">
+            <hr>
             Genres: <span class="text-primary" th:each="gen,iterStat : *{genres}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">Action, Crime, Drama</span>
             <hr>
-            <span th:text="*{fullPlot}">Cartoonist Winsor McCay agrees to create a large set of drawings that will be photographed and made into a motion picture. The job requires plenty o</span>
+            <span th:text="*{fullPlot}">Description</span>
             <hr>
             Director: <span class="text-primary" th:each="gen,iterStat : *{directors}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">James</span>
             <hr>
@@ -80,17 +28,14 @@
             <hr>
             Stars: <span class="text-primary" th:each="gen,iterStat : *{cast}" th:text="${gen}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks, Leonardo</span>
         </div>
-        <div class="col-sm-4 order-sm-2 order-1">
-            <img class="movie-poster" src="../images/poster.jpg" th:src="*{poster}">
+        <div class="col-md-4 order-md-2 order-1">
+            <img class="movie-poster" src="../images/wall1.jpg" th:src="*{poster}">
         </div>
     </div>
 </main>
 
-<footer th:insert="~{fragments/footer}">
-
+<footer th:insert="~{fragments/frontend::footer}">
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </body>
 </html>
