--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -15,20 +15,21 @@
 </header>
 
 <main>
+    <div th:replace="~{fragments/frontend::breadcrumb}"></div>
     <div class="container pt-5" th:fragment="grid">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
             <div class="col" th:each="movie : ${list}">
                 <div class="card p-0">
                     <div class="imgPlaceHolder">
-                        <a href="movie.html" th:href="@{/movie(id=${movie.get_id()})}" class="text-decoration-none">
+                        <a href="movie.html" th:href="@{/movie(id=${movie.getId()})}" class="text-decoration-none">
                             <img th:src="${movie.getPoster()}" class="card-img-top">
                         </a>
                     </div>
                     <div class="card-body">
-                        <a href="movie.html" th:href="@{/movie(id=${movie.get_id()})}" class="text-decoration-none">
+                        <a href="movie.html" th:href="@{/movie(id=${movie.getId()})}" class="text-decoration-none">
                             <h5 class="card-title movie-title" th:text="${movie.getTitle()} + ' ('+ ${movie.year} + ')'">Title (yyyy)</h5>
                         </a>
-                        <p class="card-text movie-description" th:text="${movie.getPlog()}">Description</p>
+                        <p class="card-text movie-description" th:text="${movie.getPlot()}">Description</p>
                         <p class="card-text movie-cast">
                             <small class="text-muted" th:each="cast,iterStat : ${movie.getCast()}" th:text="${cast}+ ${!iterStat.last ? ', ' : ''}">Cast1, Cast2</small>
                         </p>
