--- a/src/main/webapp/templates/fragments/frontend.html
+++ b/src/main/webapp/templates/fragments/frontend.html
@@ -2,6 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <link th:href="@{/css/main.css}" href="../../css/main.css" rel="stylesheet">
     <title th:text="#{site_name}">Title</title>
 </head>
@@ -16,17 +17,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Hot</a>
+                    <a class="nav-link" href="#"><span th:text="#{hot}">Hot</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Trending</a>
+                    <a class="nav-link" href="#"><span th:text="#{trending}">Trending</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Genres
+                        <span th:text="#{genres1}">Genres</span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" th:with="genres=#{genres}">
-                        <li th:each="gen:${#strings.arraySplit(genres,',')}"><a class="dropdown-item" th:href="@{/(by='genres',value=${gen})}"><span th:text="${gen}"></span></a></li>
+                        <li th:each="gen:${#strings.arraySplit(genres,',')}"><a class="dropdown-item" th:href="@{/(by='genres',value=${#strings.arraySplit(gen, '|')[0]})}"><span th:text="${#strings.arraySplit(gen, '|')[1]}"></span></a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -35,9 +36,58 @@
                 </li>
             </ul>
             <form class="d-flex" method="get" action="/">
-                <input class="form-control me-2" type="search" name="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control" type="search" name="text" placeholder="Search" th:placeholder="#{search}" aria-label="Search">
             </form>
+            <div class="btn-group ms-3">
+                <button type="button" class="btn btn-warning dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span th:text="#{language}">🇬🇧 English</span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" th:href="@{${url}(lang=en)}">🇬🇧 English</a></li>
+                    <li><a class="dropdown-item" th:href="@{${url}(lang=fr)}">🇫🇷 Français</a></li>
+                    <li><a class="dropdown-item" th:href="@{${url}(lang=vi)}">🇻🇳 Tiếng Việt</a></li>
+                </ul>
+            </div>
+            <button id="login" type="button" class="guest btn btn-primary ms-3 d-none" data-bs-toggle="modal" data-bs-target="#modal-login"><span th:text="#{login}">Login</span></button>
+            <div id="login-spinner" class="spinner-border text-light ms-3" role="status"></div>
+            <div class="dropdown">
+                <img id="avatar" th:src="@{/images/user.svg}" src="../../images/user.svg" data-bs-toggle="dropdown" width="38x" height="38x"
+                     class="user avatar rounded-circle ms-3 d-none dropdown-toggle">
+                <ul class="dropdown-menu dropdown-menu-center text-small" aria-labelledby="dropdownUser1">
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#modal-login">Profile</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#" onclick="firebase.auth().signOut();">Sign out</a></li>
+                </ul>
+            </div>
+            <div class="modal d-block1" id="modal-login" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content shadow">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Login</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div id="firebaseui-auth-container" class="guest"></div>
+                            <div id="user-signed-in" class="d-none d-flex user">
+                                <div class="flex-grow-1 d-flex justify-content-center">
+                                    <img th:src="@{/images/user.svg}" src="../../images/user.svg" width="110px" height="110px" class="avatar rounded-circle">
+                                </div>
+                                <div class="flex-grow-1  d-flex flex-column align-self-center me-4">
+                                    <div id="name" class="align-self-center text-primary fs-5">Name</div>
+                                    <div id="email" class="align-self-center ">Email</div>
+                                    <div id="phone">Phone</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer d-none user">
+                            <button id="sign-out" type="button" class="btn btn-danger" onclick="firebase.auth().signOut();">Sign out</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </nav>
@@ -96,6 +146,13 @@
             <a class="text-dark" href="https://mdbootstrap.com/"><span th:text="#{site_name}">mflix</span></a>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script th:src="@{/js/main.js}" src="../../js/main.js"></script>
+
 </footer>
